--- a/media/css/responsivemenu.css
+++ b/media/css/responsivemenu.css
@@ -203,7 +203,15 @@ text-rendering: optimizeLegibility;
   float: left;
   width: 50%;
   text-align: center;
+
 }
+@media (max-width:700px) {
+.responsive-menu .mmenu-logo {
+  width: 30%;
+
+}
+}
+
 .responsive-menu .mmenu-logo img {
   height: 30px;
 }
